# frappe-copilot-frontend

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
frappe_copilot/: hooks.py  install.py  modules.txt
frappe_copilot/api/: __init__.py
frappe_copilot/frappe_copilot/doctype/copilot_settings/: copilot_settings.js  copilot_settings.json  copilot_settings.py
frappe_copilot/public/css/: copilot.css
frontend/: package-lock.json  package.json  vite.config.js  vitest.config.ts
frontend/scripts/: update-hooks.js
frontend/src/: App.vue  main.ts
frontend/src/components/: ChatHeader.vue  ChatInput.vue  ChatMessages.vue  ChatSidebar.vue  ConnectionStatus.vue  MessageBubble.vue  ToolCallCard.vue
frontend/src/components/blocks/: ChartBlock.vue  KPICards.vue  StatusList.vue  TableBlock.vue  TextBlock.vue  index.ts
frontend/src/composables/: useAuth.ts  useChat.ts  useSettings.ts  useWebSocket.ts
frontend/src/types/: blocks.ts  index.ts  websocket.ts
frontend/src/utils/: formatters.ts  markdown.ts
tests/frontend/src/components/__tests__/: ChatInput.test.ts  ChatSidebar.test.ts  ConnectionStatus.test.ts  MessageBubble.test.ts
tests/frontend/src/components/__tests__/blocks/: ChartBlock.test.ts  KPICards.test.ts  StatusList.test.ts  TableBlock.test.ts  TextBlock.test.ts
tests/frontend/src/composables/__tests__/: useChat.test.ts  useWebSocket.test.ts
tests/frontend/src/utils/__tests__/: context.test.ts  formatters.test.ts
