[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frappe-copilot"
version = "0.1.0"
description = "AI sidebar for ERPNext — Vue 3 frontend with WebSocket streaming"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
